# jrl_qp_controller

./: CMakeLists.txt  mainpage.dox  manifest.xml
examples/: humanoid-posture-controller.cc  locomotion-controller-torques.cc  locomotion-controller.cc  nao-config-sneaky.hh  nao-config.hh  simple-controller.cc  state-publisher-controller.cc
include/jrl_qp_controller/: angular-momentum-task.hh  com-task.hh  configuration-task.hh  contact-constraint.hh  controller.hh  feature-task.hh  fwd.hh  gik-feature-task.hh  locomotion-controller.hh  min-contact-force.hh  min-torque-task.hh  nao-hip-task.hh  parallel-task.hh  plane-task.hh  position-task.hh  problem-oases.hh  problem.hh  task.hh  transformation-task.hh
msg/: LocomotionParameters.msg
src/: angular-momentum-task.cc  com-task.cc  configuration-task.cc  contact-constraint.cc  controller.cc  controller.cpp  controller.h  feature-task.cc  gik-feature-task.cc  locomotion-controller.cc  min-contact-force.cc  min-torque-task.cc  nao-hip-task.cc  parallel-task.cc  plane-task.cc  position-task.cc  problem-oases.cc  problem.cc  transformation-task.cc
